# auto-selection

./: .gitignore  BROWSER_AUTOMATION_GUIDE.md  EXAMPLES.md  LOGO_DETECTION_GUIDE.md  QUICKSTART.md  README.md  analysis_results.json  browser_automation.py  check_environment.py  config.json  config.template.json  install_tesseract.sh  main.py  page.html  pyproject.toml  run_browser_automation.sh  test_selectors.py  插件.html
assets/kuajing-erp-plugin-v3/: background.js  collect-platform-1688-unlisted.js  collect-platform-2tong-unlisted.js  collect-platform-aliexpress-unlisted.js  collect-platform-bao66-unlisted.js  collect-platform-coupang-unlisted.js  collect-platform-gigab2b-unlisted.js  collect-platform-haibei-unlisted.js  collect-platform-juyiwang-unlisted.js  collect-platform-k3-unlisted.js  collect-platform-kwaixiaodian-unlisted.js  collect-platform-lazada-unlisted.js  collect-platform-ozon-unlisted.js  collect-platform-shein-unlisted.js  collect-platform-shopee-unlisted.js  collect-platform-temu-unlisted.js  collect-platform-ugoodspirit-unlisted.js  collect-platform-vip-unlisted.js  collect-platform-walmart-unlisted.js  collect-platform-westmonth-unlisted.js  collect-platform-wildberries-unlisted.js  collect-platform-xingfujie-unlisted.js  fetch-platform-1688selloffer-unlisted.js  install-page.html  manifest.json  platform-base-utils.js  popup.html
assets/kuajing-erp-plugin-v3/assets/: input-Co0e5aiB.css  (+3 more)
src/local_product_recognition/: __init__.py  image_utils.py  ocr.py  recognizer.py  types.py
tests/: image_factory.py  test_detectors.py  test_recognizer.py
(+103 files in other folders)
