[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-product-recognition"
version = "0.1.0"
description = "Fully local product image recognition for safety review workflows"
readme = "README.md"
authors = [
  { name = "Auto Generated", email = "devnull@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3.0",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "playwright>=1.40",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_product_recognition = [
  "data/logos/*.png"
]
